made my site look awesome

--- a/index.html
+++ b/index.html
@@ -1,20 +1,21 @@
 <html>
 <head>
-
-
+    <link rel="stylesheet" type="text/css" href="./styles.css">
 
 </head>
 <body>
-    <h1>
-        Heading
-    </h1>
 
-    <h2>
-        Cool <a href="#">Stuff</a>
-    </h2>
+    <div class="kitten-header">
+        <h1 id="main-heading">
+            Cute Kitten
+        </h1>
+
+        <h2 class="secondary-heading">
+            Cool <a href="#">Stuff</a>
+        </h2>
 
     <ul>
-        <li>first item</li>
+        <li class="kitten-header">
         <li>second item</li>
     </ul>
 
