--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <li class="kitten-header">
         <li>second item</li>
     </ul>
+        <h1>lol</h1>
 
 <img src="http://placekitten.com/g/200/300">
 
